<resources>
    <string name="app_name">RPG Dice</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- My Strings-->
    <string name="a_d20_drawing">A d20 drawing.</string>
    <string name="a_d6_drawing">A d6 drawing.</string>
    <string name="fab_description">A round button for share the app.</string>
    <string name="tap_the_dice">Tap the dice!</string>
    <string name="one">1</string>
    <string name="share_text">Share RPG Dice!</string>
    <string name="share_extra_text">Let\'s go to the dungeon...</string>
    <string name="select_dice">Select your dice!</string>
    <string name="plus">Plus button.</string>
    <string name="minus">Minus button.</string>
    <!-- Settings Strings -->
    <string name="dice_sound_settings">- Dice sound when tapping</string>
    <string name="on_critical_sound_settings">- Critical make sounds</string>
    <string name="on_fail_sound_settings">- Fails make sounds</string>
    <string name="save_settings">Save</string>
    <!-- Arrays -->
    <string-array name="on_critical_array">
        <item>It\'s a critical!</item>
        <item>Yeah!</item>
        <item>Slay.Them.All!</item>
        <item>Hold my fireball.</item>
        <item>Ride the Dragon!</item>
        <item>We\'re gonna need a bigger bad guy...</item>
        <item>UwU *critical cringe!*</item>
        <item>Yes they\'re natural.</item>
    </string-array>
    <!-- On Fail-->
    <string-array name="on_fail_array">
        <item>It\'s a fail…</item>
        <item>The worst result possible.</item>
        <item>Haha!</item>
        <item>You roll like a baby!</item>
        <item>Get well soon.</item>
        <item>See you space cowboy...</item>
        <item>Shit happens.</item>
        <item>¯\_(ツ)_/¯</item>
        <item>Why is the DM smiling?</item>
    </string-array>
    <!-- On Neutral -->
    <string-array name="on_neutral_array">
        <item>They see me rolling…</item>
        <item>Pursuit your dreams!</item>
        <item>Where is the Dragon?</item>
        <item>There is fun in funeral!</item>
        <item>If your character is hungry, ask your DM if cannibalism is an option in this game.</item>
        <item>Definitely not a mimic!</item>
        <item>It\'s drunk an alignment?</item>
        <item>If you can\'t beat the undead, join them!</item>
        <item>Never trust clerics.</item>
        <item>If everything fails, you just need to outrun the paladin.</item>
        <item>The power of imagination!</item>
        <item>As a free action, can I regret my life choices?</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>