<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/tv_sentence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/tap_the_dice"
        android:textAlignment="center"
        android:textColor="@color/red_tittles"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_resultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ib_dice"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/a_d20_drawing"
        android:scaleType="fitCenter"
        android:src="@drawable/d20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.595" />

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/one"
        android:textAlignment="center"
        android:textColor="@color/gray_texts"
        android:textSize="70sp"
        app:layout_constraintBottom_toTopOf="@+id/ib_dice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_number_of_dices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginBottom="104dp"
        android:text="@string/one"
        android:textAlignment="center"
        android:textColor="@color/gray_texts"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/ib_plus"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/plus"
        android:scaleType="fitCenter"
        android:src="@drawable/plus"
        app:layout_constraintBottom_toTopOf="@+id/tv_number_of_dices"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="#FFFFFF" />

    <ImageButton
        android:id="@+id/ib_minus"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/minus"
        android:scaleType="fitCenter"
        android:src="@drawable/minus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_number_of_dices"
        app:tint="#FFFFFF" />

    <ImageButton
        android:id="@+id/ib_dices"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="85dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/red_tittles"
        android:contentDescription="@string/select_dice"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/dices"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>